--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
         <!-- .ibx적용하지 않음! -->
         <main class="cont">
             <video class="video-bg" autoplay muted loop>
-                <source src="http://www.georgewpark.com/video/blurred-street.mp4" type="video/mp4" />
-                <source src="http://www.georgewpark.com/video/blurred-street.webm" type="video/webm" />
+                <source src="./video/Blase(블라세) 2nd LP Teaser _ Live.mp4" type="video/mp4" />
             </video>
            
             <!-- 굿즈 박스 -->
@@ -185,7 +184,7 @@
                     <!-- 굿즈 이미지박스 -->
                     <div class="ci lv2">
                         <!-- 굿즈 이미지 -->
-                        <img src="./image/sign cd.jpg" alt="fan, Level 1">
+                        <!-- <img src="./image/sign cd.jpg" alt="fan, Level 1"> -->
                         <img src="./image/goods_tshirt.jpg" alt="fan, Level 2">
                         <!-- 굿즈 이름이미지 -->
                         <span>
@@ -210,8 +209,8 @@
                     <!-- 굿즈 이미지박스 -->
                     <div class="ci lv3">
                         <!-- 굿즈 이미지 -->
-                        <img src="./image/sign cd.jpg" alt="fan, Level 1">
-                        <img src="./image/goods_tshirt.jpg" alt="fan, Level 2">
+                        <!-- <img src="./image/sign cd.jpg" alt="fan, Level 1"> -->
+                        <!-- <img src="./image/goods_tshirt.jpg" alt="fan, Level 2"> -->
                         <img src="./image/goods_coffee.jpg" alt="fan, Level 3">
                         <!-- 굿즈 이름이미지 -->
                         <span>
@@ -237,9 +236,9 @@
                     <!-- 굿즈 이미지박스 -->
                     <div class="ci lv4">
                         <!-- 굿즈 이미지 -->
-                        <img src="./image/sign cd.jpg" alt="fan, Level 1">
-                        <img src="./image/goods_tshirt.jpg" alt="fan, Level 2">
-                        <img src="./image/goods_coffee.jpg" alt="fan, Level 3">
+                        <!-- <img src="./image/sign cd.jpg" alt="fan, Level 1"> -->
+                        <!-- <img src="./image/goods_tshirt.jpg" alt="fan, Level 2"> -->
+                        <!-- <img src="./image/goods_coffee.jpg" alt="fan, Level 3"> -->
                         <img src="./image/good_midi.jpg" alt="Master of Blase !">
                         <!-- 굿즈 이름이미지 -->
                         <span>
@@ -303,10 +302,10 @@
             <!-- 3-4. 바로가기 -->
             <div class="brand">
                 <select name="sel" id="sel">
-                    <option value="init">브랜드 바로가기</option>
-                    <option value="tvn">tvN</option>
-                    <option value="ocn">OCN</option>
-                    <option value="mnet">MNET</option>
+                    <option value="init">아티스트 바로가기</option>
+                    <option value="tvn">Coogie</option>
+                    <option value="ocn">사이먼도미닉</option>
+                    <option value="mnet">펀치넬로</option>
                 </select>
                 <!-- 
                     [ select 요소 ]
